# ecoshop

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py
admin/: auth.py
admin/product/: views.py
admin/user/: views.py
alembic/: env.py
alembic/versions/: 2024_02_04_1409-384348903760_create_product_table.py  2024_02_07_2322-87987856cfc8_add_models.py  2024_02_24_2201-532137d6b0f4_add_field_for_product.py
core/: config.py  default_constants.py
core/crud/: __init__.py  base_repository.py
core/exception/: base.py  user.py
core/models/: __init__.py  base.py  db_helper.py
docker/: app.sh  celery.sh
images/: router.py
pages/: router.py
product/models/: product.py
product/repositories/: __init__.py  product_repository.py
product/schemas/: __init__.py  product_schema.py
product/services/: product_service.py
products/: crud.py  views.py
rest_v1/: __init__.py
rest_v1/product/: views.py
rest_v1/products/: crud.py  views.py
rest_v1/user/: views.py
tasks/: celery.py  tasks.py
templates/: products.html
test/: conftest.py
user/models/: __init__.py  user.py
user/repositories/: __init__.py  user_repository.py
user/schemas/: __init__.py
user/services/: auth.py  dependencies.py
users/: __init__.py  auth.py  crud.py  dependencies.py  models.py  router.py
users/schemas/: __init__.py
